Min_Max_and_Piecewise_Expressions: Renamed module and tutorial, fixed several typos, removed need for separate small double.

--- a/Tutorial-Min_Max_and_Piecewise_Expressions.ipynb
+++ b/Tutorial-Min_Max_and_Piecewise_Expressions.ipynb
@@ -44,9 +44,8 @@
     "1. [Step 1](#min_max): Minimum and Maximum\n",
     "1. [Step 2](#piecewise): Piecewise-defined functions\n",
     "1. [Step 3](#sympy): Rewrite functions to work with symbolic expressions\n",
-    "1. [Step 4](#validation): Validation against `Conditional_Statements` NRPy+ module\n",
-    "1. [Step 5](#proof): Proof against division by zero\n",
-    "1. [Step 6](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
+    "1. [Step 4](#validation): Validation against `Min_Max_and_Piecewise_Expressions` NRPy+ module\n",
+    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -85,7 +84,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "thismodule = \"Conditional_Statements\"\n",
+    "thismodule = \"Min_Max_and_Piecewise_Expressions\"\n",
     "\n",
     "plt.rcParams.update({'font.size': 12})\n",
     "\n",
@@ -172,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feel free to test other cases above if you'd like. Note that we use a suffic, `_noif`, to avoid conflicts with other functions. When using this in NRPy+, make sure you use `sp.Rational()` and the `nrpyAbs()` function, which will always be interpreted as the C function `fabs()` (Sympy's `sp.Abs()` may get interpreted as $\\sqrt{zz^*}$, for instance).\n"
+    "Feel free to test other cases above if you'd like. Note that we use a suffix, `_noif`, to avoid conflicts with other functions. When using this in NRPy+, make sure you use `sp.Rational()` and the `nrpyAbs()` function, which will always be interpreted as the C function `fabs()` (Sympy's `sp.Abs()` may get interpreted as $\\sqrt{zz^*}$, for instance).\n"
    ]
   },
   {
@@ -186,25 +185,26 @@
     "\n",
     "Next, we'll define functions to represent branches of a piecewise-defined function. For example, consider the function \n",
     "\\begin{align}\n",
-    "|x|&= \\left \\{ \\begin{array}{lll} \\frac{1}{10}x^2+1 & \\mbox{if} & x \\leq 0 \\\\\n",
+    "f(x) &= \\left \\{ \\begin{array}{lll} \\frac{1}{10}x^2+1 & \\mbox{if} & x \\leq 0 \\\\\n",
     "\\exp(\\frac{x}{5}) & \\mbox{if} & x > 0 \\end{array} \\right. , \\\\\n",
     "\\end{align}\n",
-    "which function continuous, but not differentiable at $x=0$. The functions we'll write will have poorly defined behavior at their interfaces if the function is not continuous. \n",
+    "which is continuous, but not differentiable at $x=0$. \n",
     "\n",
-    "To solve this problem, let's add the two parts together, multiplying each part by a function that is either one or zero depending on $x$. To define $x \\leq 0$, this can be done by multiplying by the minimum of $x$ and $0$. We also will need to normalize this. To avoid putting a zero in the denominator, however, we will instead take the minimum of $x$ and some small $-\\epsilon$ in the denominator, i.e.,\n",
+    "To solve this problem, let's add the two parts together, multiplying each part by a function that is either one or zero depending on $x$. To define $x \\leq 0$, this can be done by multiplying by the minimum of $x$ and $0$. We also will need to normalize this. To avoid putting a zero in the denominator, however, we will add some small $\\epsilon$ to the denominator, i.e.,\n",
     "$$\n",
-    "\\frac{\\min(x,0)}{\\min(x,-\\epsilon)}\n",
+    "\\frac{\\min(x,0)}{x-\\epsilon}\n",
     "$$\n",
-    "This $\\epsilon$ corresponds to `SMALLDOUBLE` in NRPy+; so, we will follow suit in our code and define such a variable with its typical value, `1e-15`. **Python doesn't like too small a value here. Choose something slightly larger than machine epsilon. C might not care.**\n",
+    "This $\\epsilon$ corresponds `TINYDOUBLE` in NRPy+; so, we will define the variable here with its default value, `1e-100`. Additionally, to get the correct behavior on the boundary, we shift the boundary by $\\epsilon$, giving us\n",
+    "$$\n",
+    "\\frac{\\min(x-\\epsilon,0)}{x-\\epsilon}\n",
+    "$$\n",
     "\n",
-    "**Update: It's not the Python implementation, this is caused by catastrophic cancellation in the additions/subtractions that the min/max functions use. Maybe a separate SMALLDOUBLE value should be used that can safely be added to any given coordinate.**\n",
-    "\n",
-    "The corresponding expression for $x \\geq 0$ can be written as \n",
+    "The corresponding expression for $x > 0$ can be written as \n",
     "$$\n",
-    "\\frac{\\max(x,0)}{\\max(x,\\epsilon)},\n",
+    "\\frac{\\max(x,0)}{x+\\epsilon},\n",
     "$$\n",
     "using a positive small number to once again avoid division by zero. \n",
-    "When using these for numerical relativity codes, it is important to consider the relationship between $\\epsilon$, or `SMALLDOUBLE`, and the gridpoints in the simulation. As long as $\\epsilon$ is positive and large enough to avoid catastrophic cancellation, these functional forms avoid division by zero, as proven [below](#proof).\n",
+    "When using these for numerical relativity codes, it is important to consider the relationship between $\\epsilon$, or `TINYDOUBLE`, and the gridpoints in the simulation. As long as $\\epsilon$ is positive and large enough to avoid catastrophic cancellation, these functional forms avoid division by zero, as proven [below](#proof).\n",
     "\n",
     "So, we'll code NumPy versions of these expressions below. Naturally, there are many circumstances in which one will want the boundary between two pieces of a function to be something other than 0; if we let that boundary be $x^*$, this can easily be done by passing $x-x^*$ to the maximum/minimum functions. For the sake of code readability, we will write the functions to pass $x$ and $x^*$ as separate arguments. Additionally, we code separate functions for $\\leq$ and $<$, and likewise for $\\geq$ and $>$. The \"or equal to\" versions add a small offset to the boundary to give the proper behavior on the desired boundary. "
    ]
@@ -228,28 +228,27 @@
     }
    ],
    "source": [
-    "SMALLDOUBLE = 1.0e-15\n",
+    "TINYDOUBLE = 1.0e-100\n",
     "def coord_leq_bound(x,xstar): \n",
     "    # Returns 1.0 if x <= xstar, 0.0 otherwise. \n",
-    "    # Requires appropriately defined SMALLDOUBLE\n",
-    "    return min_noif(x-xstar-SMALLDOUBLE,0.0)/min_noif(x-xstar-SMALLDOUBLE,-SMALLDOUBLE)\n",
+    "    # Requires appropriately defined TINYDOUBLE\n",
+    "    return min_noif(x-xstar-TINYDOUBLE,0.0)/(x-xstar-TINYDOUBLE)\n",
     "\n",
     "def coord_geq_bound(x,xstar): \n",
     "    # Returns 1.0 if x >= xstar, 0.0 otherwise. \n",
-    "    # Requires appropriately defined SMALLDOUBLE\n",
-    "    return max_noif(x-xstar+SMALLDOUBLE,0.0)/max_noif(x-xstar+SMALLDOUBLE,SMALLDOUBLE)\n",
+    "    # Requires appropriately defined TINYDOUBLE\n",
+    "    return max_noif(x-xstar+TINYDOUBLE,0.0)/(x-xstar+TINYDOUBLE)\n",
     "\n",
     "def coord_less_bound(x,xstar): \n",
     "    # Returns 1.0 if x < xstar, 0.0 otherwise. \n",
-    "    # Requires appropriately defined SMALLDOUBLE\n",
-    "    return min_noif(x-xstar,0.0)/min_noif(x-xstar,-SMALLDOUBLE)\n",
+    "    # Requires appropriately defined TINYDOUBLE\n",
+    "    return min_noif(x-xstar,0.0)/(x-xstar-TINYDOUBLE)\n",
     "\n",
     "def coord_greater_bound(x,xstar): \n",
     "    # Returns 1.0 if x > xstar, 0.0 otherwise. \n",
-    "    # Requires appropriately defined SMALLDOUBLE\n",
-    "    return max_noif(x-xstar,0.0)/max_noif(x-xstar,SMALLDOUBLE)\n",
+    "    # Requires appropriately defined TINYDOUBLE\n",
+    "    return max_noif(x-xstar,0.0)/(x-xstar+TINYDOUBLE)\n",
     "\n",
-    "x_data -= SMALLDOUBLE\n",
     "# Now, define our the equation and plot it. \n",
     "y_data = coord_less_bound(x_data,0.0)*(0.1*x_data**2.0+1.0)\\\n",
     "        +coord_geq_bound(x_data,0.0)*np.exp(x_data/5.0)\n",
@@ -268,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plot above shows the expected piecewise-defined function. It is important in applying these functions that each greater-than be paired with a less-than-or-equal-to, or vice versa. Otherwise, the way these are written, a point on the boundary will have be set to zero or twice the expected value. \n",
+    "The plot above shows the expected piecewise-defined function. It is important in applying these functions that each greater-than be paired with a less-than-or-equal-to, or vice versa. Otherwise, the way these are written, a point on the boundary will be set to zero or twice the expected value. \n",
     "\n",
     "These functions can be easily combined for more complicated piecewise-defined functions; if a piece of a function is defined as $f(x)$ on $x^*_- \\leq x < x^*_+$, for instance, simply multiply by both functions, e.g. \n",
     "```\n",
@@ -311,12 +310,12 @@
    "source": [
     "<a id='validation'></a>\n",
     "\n",
-    "# Step 4: Validation against `Conditional_Statements` NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Validation against `Min_Max_and_Piecewise_Expressions` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{validation}$$\n",
     "\n",
     "As a code validation check, we will verify agreement in the SymPy expressions for plane-wave initial data for the Scalar Wave equation between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [Conditional_Statements](../edit/Conditional_Statements.py) module."
+    "2. the NRPy+ [Min_Max_and_Piecewise_Expressions](../edit/Min_Max_and_Piecewise_Expressions.py) module."
    ]
   },
   {
@@ -333,11 +332,11 @@
     }
    ],
    "source": [
-    "# Reset & redefine SMALLDOUBLE for proper comparison\n",
-    "%reset_selective -f SMALLDOUBLE\n",
-    "SMALLDOUBLE = par.Cparameters(\"#define\", thismodule, \"SMALLDOUBLE\", 1e-10)\n",
+    "# Reset & redefine TINYDOUBLE for proper comparison\n",
+    "%reset_selective -f TINYDOUBLE\n",
+    "TINYDOUBLE = par.Cparameters(\"#define\", thismodule, \"TINYDOUBLE\", 1e-10)\n",
     "\n",
-    "import Conditional_Statements as noif\n",
+    "import Min_Max_and_Piecewise_Expressions as noif\n",
     "all_passed=0\n",
     "\n",
     "def comp_func(expr1,expr2,basename,prefixname2=\"noif.\"):\n",
@@ -385,58 +384,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='proof'></a>\n",
-    "\n",
-    "# Step 5: Proof against division by zero \\[Back to [top](#toc)\\]\n",
-    "$$\\label{proof}$$\n",
-    "\n",
-    "Here, we will prove that setting a positive, non-zero $\\epsilon$, as we do in in [Step 2](#piecewise), will avoid division by zero. The functions defined there for greater-than and less-than contain a divison over either $\\max(x-x^*,\\epsilon)$ or $\\min(x-x^*,-\\epsilon)$. Our goal is to show that these can never equal zero, which we will do using a proof by contradiction. We will first focus on the maximum, which is equivalent (as previously defined in this module) to $\\frac{1}{2}\\left(x-x^*+\\epsilon + |x-x^*-\\epsilon|\\right)$. Assume this expression is equal to zero. Hence, $x-x^*+\\epsilon = -|x-x^*-\\epsilon|$. The absolute value presents two possibilities here. If its argument is positive, then $x-x^* > \\epsilon$. So,\n",
-    "\\begin{align}\n",
-    "x - x^* + \\epsilon &= -x + x^* + \\epsilon \\\\\n",
-    "2(x-x^*) &= 0 \\\\\n",
-    "x-x^* &= 0.\n",
-    "\\end{align}\n",
-    "But, recall that this is the case where $x-x^*>\\epsilon$ and $\\epsilon>0$, leading us to a contradiction. In the other case, the argument of the absolute value is negative, then $x-x^* < \\epsilon$ and \n",
-    "\\begin{align}\n",
-    "x - x^* + \\epsilon &= -x + x^* + \\epsilon \\\\\n",
-    "\\epsilon &= 0 \\\\\n",
-    "\\end{align}\n",
-    "Again, we arrive at a contradiction since we assumed that $\\epsilon \\neq 0$. Therefore, in either case, the expression $\\max(x-x^*,\\epsilon) \\neq 0$\n",
-    "\n",
-    "Now, the minimum. Suppose that $\\min(x-x^*,-\\epsilon) = \\frac{1}{2}\\left(x-x^*-\\epsilon-|x-x^*+\\epsilon|\\right) =0$. The absolute value gives us two cases, each similar to before. If $x-x^* > -\\epsilon$, then\n",
-    "\\begin{align}\n",
-    "x - x^* - \\epsilon &= x - x^* +\\epsilon \\\\\n",
-    "\\epsilon &= 0. \\\\\n",
-    "\\end{align}\n",
-    "Again, this contradicts our previous assumption that $\\epsilon \\neq 0$. If $x-x^* < -\\epsilon$, then \n",
-    "\\begin{align}\n",
-    "x - x^* - \\epsilon &= -x + x^* -\\epsilon \\\\\n",
-    "2(x-x^*) &= 0 \\\\\n",
-    "x-x^* &= 0.\n",
-    "\\end{align}\n",
-    "But $x-x^* < -\\epsilon <0$ since we define $\\epsilon$ as positive, again leading to a contradiction. Therefore, in neither case is $\\min(x-x^*,-\\epsilon) = 0$\n",
-    "\n",
-    "We must also briefly consider the greater-than-or-equal-to and less-than-or-equal-to functions. These are to the above, except we replace $x-x^*$ with $x-x^*+\\epsilon$ or $x-x^*-\\epsilon$. However, note that we made no assumptions previously about the value of $x-x^*$, except an implicit assumption that all values are real. Thus, our previous conclusions still hold. \n",
-    "\n",
-    "When considering the application of this proof to computational problems, clarification must be made about the definition of \"non-zero\". Here, $\\epsilon$ must be large enough that\n",
-    "\\begin{align}\n",
-    "x+x^*+\\epsilon &\\neq x+x^* \\\\\n",
-    "{\\rm and\\ \\ } x+x^*+\\epsilon &\\neq x+x^* \\\\\n",
-    "\\end{align}\n",
-    "when done with double-precision, floating-point arithmetic. Practically, this requires $\\epsilon \\gtrsim 4.4 \\times 10^{-16}(x+x^*)$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 6: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-Conditional_Statements.pdf](Tutorial-Conditional_Statements.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-Min_Max_and_Piecewise_Expressions.pdf](Tutorial-Min_Max_and_Piecewise_Expressions.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -461,10 +415,10 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Conditional_Statements.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Conditional_Statements.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Conditional_Statements.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Conditional_Statements.tex\n",
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Min_Max_and_Piecewise_Expressions.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Min_Max_and_Piecewise_Expressions.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Min_Max_and_Piecewise_Expressions.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Min_Max_and_Piecewise_Expressions.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
