--- a/in_progress/Tutorial-GiRaFFE_NRPy-FCVAL.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-FCVAL.ipynb
@@ -71,6 +71,7 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "Ccodesdir = \"GiRaFFE_standalone_Ccodes/FCVAL\"\n",
     "cmd.mkdir(os.path.join(Ccodesdir))"
@@ -219,28 +220,44 @@
     "// Kronecker delta: all zero-offset\n",
     "const int kronecker_delta[3][3] = { { 1,0,0 },\n",
     "                                    { 0,1,0 },\n",
-    "                                    { 0,0,1 } };\n",
+    "                                    { 0,0,1 } };\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc = \"Interpolate metric gridfunctions to cell faces\"\n",
+    "name = \"interpolate_metric_gfs_to_cell_faces\"\n",
+    "interp_Cfunc = outCfunction(\n",
+    "    outfile  = \"returnstring\", desc=desc, name=name,\n",
+    "    params   =\"const paramstruct *params,REAL *auxevol_gfs,const int flux_dirn\",\n",
+    "    preloop  =\"\"\"    int in_gf,out_gf;\n",
+    "    REAL Qm2,Qm1,Qp0,Qp1;\n",
     "\n",
-    "void interpolate_metric_gfs_to_cell_faces(const paramstruct *params,REAL *auxevol_gfs,const int flux_dirn) {\n",
-    "#include \"set_Cparameters.h\"\n",
-    " \n",
-    "#pragma omp parallel for\n",
-    "    for(int gf = 0;gf < num_metric_gfs;gf++) {\n",
-    "        int in_gf  = metric_gfs_list[gf];\n",
-    "        int out_gf = metric_gfs_face_list[gf];\n",
+    "\"\"\" ,\n",
+    "    body     =\"\"\"    for(int gf = 0;gf < num_metric_gfs;gf++) {\n",
+    "        in_gf  = metric_gfs_list[gf];\n",
+    "        out_gf = metric_gfs_face_list[gf];\n",
     "        for (int i2 = NGHOSTS;i2 < Nxx2+NGHOSTS+1;i2++) {\n",
     "            for (int i1 = NGHOSTS;i1 < Nxx2+NGHOSTS+1;i1++) {\n",
     "                for (int i0 = NGHOSTS;i0 < Nxx2+NGHOSTS+1;i0++) {\n",
-    "                    REAL Qm2 = auxevol_gfs[IDX4S(in_gf,i0-2*kronecker_delta[0][flux_dirn],i1-2*kronecker_delta[1][flux_dirn],i2-2*kronecker_delta[2][flux_dirn])];\n",
-    "                    REAL Qm1 = auxevol_gfs[IDX4S(in_gf,i0-kronecker_delta[0][flux_dirn],i1-kronecker_delta[1][flux_dirn],i2-kronecker_delta[2][flux_dirn])];\n",
-    "                    REAL Qp0 = auxevol_gfs[IDX4S(in_gf,i0,i1,i2)];\n",
-    "                    REAL Qp1 = auxevol_gfs[IDX4S(in_gf,i0+kronecker_delta[0][flux_dirn],i1+kronecker_delta[1][flux_dirn],i2+kronecker_delta[2][flux_dirn])];\n",
+    "                    Qm2 = auxevol_gfs[IDX4S(in_gf,i0-2*kronecker_delta[0][flux_dirn],i1-2*kronecker_delta[1][flux_dirn],i2-2*kronecker_delta[2][flux_dirn])];\n",
+    "                    Qm1 = auxevol_gfs[IDX4S(in_gf,i0-kronecker_delta[0][flux_dirn],i1-kronecker_delta[1][flux_dirn],i2-kronecker_delta[2][flux_dirn])];\n",
+    "                    Qp0 = auxevol_gfs[IDX4S(in_gf,i0,i1,i2)];\n",
+    "                    Qp1 = auxevol_gfs[IDX4S(in_gf,i0+kronecker_delta[0][flux_dirn],i1+kronecker_delta[1][flux_dirn],i2+kronecker_delta[2][flux_dirn])];\n",
     "                    auxevol_gfs[IDX4S(out_gf,i0,i1,i2)] = COMPUTE_FCVAL(Qm2,Qm1,Qp0,Qp1);\n",
     "                }\n",
     "            }\n",
     "        }\n",
     "    }\n",
-    "}"
+    "\n",
+    "\"\"\")\n",
+    "\n",
+    "with open(os.path.join(Ccodesdir,\"interpolate_metric_gfs_to_cell_faces.h\"),\"a\") as file:\n",
+    "    file.write(interp_Cfunc)"
    ]
   },
   {
@@ -257,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
