GiRaFFE_NRPy-FCVAL: Fixed typo in headings.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-FCVAL.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-FCVAL.ipynb
@@ -18,7 +18,7 @@
     "## Author: Patrick Nelson\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "**Notebook Status:** <font color='red '><b>In progress</b></font>\n",
+    "**Notebook Status:** <font color='green'><b>Validated</b></font>\n",
     "\n",
     "**Validation Notes:** This module will be self-validated against [its module](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_FCVAL.py) and will also be validated against the corresponding algorithm in the old `GiRaFFE` code in [this tutorial](Tutorial-Start_to_Finish-GiRaFFE_NRPy-FCVAL.ipynb).\n",
     "\n",
