GiRaFFE_NRPy-FCVAL: Fixed typo in headings.

--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-FCVAL.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-FCVAL.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## This module Validates the `FCVAL` routine for `GiRaFFE`.\n",
     "\n",
-    "**Notebook Status:** <font color='red'><b>In progress</b></font>\n",
+    "**Notebook Status:** <font color='green'><b>Validated</b></font>\n",
     "\n",
     "**Validation Notes:** This module will validate the routines in [Tutorial-GiRaFFE_NRPy-FCVAL](Tutorial-GiRaFFE_NRPy-FCVAL.ipynb).\n",
     "\n",
@@ -45,7 +45,7 @@
     "\n",
     "This notebook is organized as follows\n",
     "\n",
-    "1. [Step 1](#setup): Set up core functions and parameters for unit testing the A2B algorithm\n",
+    "1. [Step 1](#setup): Set up core functions and parameters for unit testing the FCVAL algorithm\n",
     "    1. [Step 1.a](#expressions) Write expressions for the metric gridfunctions\n",
     "    1. [Step 1.b](#ccodekernels) Generate C functions to calculate the gridfunctions\n",
     "    1. [Step 1.c](#free_parameters) Set free parameters in the code\n",
@@ -61,7 +61,7 @@
    "source": [
     "<a id='setup'></a>\n",
     "\n",
-    "# Step 1: Set up core functions and parameters for unit testing the A2B algorithm \\[Back to [top](#toc)\\]\n",
+    "# Step 1: Set up core functions and parameters for unit testing the FCVAL algorithm \\[Back to [top](#toc)\\]\n",
     "$$\\label{setup}$$\n",
     "\n",
     "We'll start by appending the relevant paths to `sys.path` so that we can access sympy modules in other places. Then, we'll import NRPy+ core functionality and set up a directory in which to carry out our test. "
