Stilde_source_A_gauge_Phi_rhs: Changed some things to generate the StildeD source term function correctly. Worked on implementing the unit test.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.ipynb
@@ -14,12 +14,14 @@
     "</script>\n",
     "\n",
     "# Other Terms for the GRFFE Right-Hand Sides: $\\tilde{S}_i$ source term, $A_i$ gauge term, and $\\psi^6 \\Phi$\n",
-    "### Author: Patrick Nelson\n",
+    "\n",
+    "## Author: Patrick Nelson\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
     "This notebook documents the simpler terms required for the RHSs used in the evolution equations in `GiRaFFE_NRPy`. The evolution equations in GRFFE are as follows:\n",
     "\\begin{align}\n",
     "\\partial_t \\tilde{S}_i + \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) &= \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} \\\\\n",
-    "\\partial_t A_i &= \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j) \\\\\n",
+    "\\partial_t A_i = \\epsilon_{ijk} v^j B^k &- \\partial_i (\\alpha \\Phi - \\beta^j A_j) \\\\\n",
     "\\partial_t [\\sqrt{\\gamma} \\Phi] + \\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) &= - \\xi \\alpha [\\sqrt{\\gamma} \\Phi] \\\\\n",
     "\\end{align}\n",
     "We have already handled two of these terms in separate modules because they required extra care to be taken. The flux term $\\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right)$ was covered in [this tutorial](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb), and the no-gauge term $\\epsilon_{ijk} v^j B^k$ was covered in [this tutorial](Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb). The remaining terms are simpler, and will all be handled here: the curvature term $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$, the gauge term $- \\partial_i (\\alpha \\Phi - \\beta^j A_j)$, and the right-hand side of $\\partial_t [\\sqrt{\\gamma} \\Phi]$. All of these terms can be handled with basic finite-differencing, at which NRPy+ excels. \n",
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,16 +93,7 @@
     "\n",
     "# Here, we'll import the GRHD and GRFFE modules. \n",
     "import GRHD.equations as GRHD\n",
-    "import GRFFE.equations as GRFFE\n",
-    "\n",
-    "# First define hydrodynamical quantities\n",
-    "ValenciavU = ixp.declarerank1(\"ValenciavU\", DIM=3)\n",
-    "BU = ixp.declarerank1(\"B_tildeU\", DIM=3)\n",
-    "\n",
-    "# Then ADM quantities\n",
-    "gammaDD = ixp.declarerank2(\"gammaDD\",\"sym01\",DIM=3)\n",
-    "betaU   = ixp.declarerank1(\"betaU\", DIM=3)\n",
-    "alpha   = sp.symbols('alpha', real=True)\n"
+    "import GRFFE.equations as GRFFE\n"
    ]
   },
   {
@@ -130,39 +123,35 @@
     "\\end{align}\n",
     "Our concern is the source term $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$. We'll suppose the flux term has already been computed and that we need to add this contribution on, *without* overwriting existing data. To do this with NRPy+, we'll use `declarerank1()` instead of `zerorank1()`. This will let us start with write code of the form `StildeD0 = StildeD0 + source_term`. In that way, we can write\n",
     "$$\n",
-    "\\partial_t \\tilde{S}_i += \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}\n",
+    "\\partial_t \\tilde{S}_i \\ += \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_StildeD_source_term(gammaDD,betaU,alpha,sqrt4pi,ValenciavU,BU):\n",
+    "def compute_StildeD_source_term(gammaDD,betaU,alpha,gammaDD_dD,betaU_dD,alpha_dD,sqrt4pi,ValenciavU,BU):\n",
     "    # First, we'll use the GRHD module to generate the metric derivatives, four-velocity, and small b\n",
     "    GRHD.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha,betaU,gammaDD, ValenciavU)\n",
     "\n",
     "    # Next sqrt(gamma)\n",
     "    GRHD.compute_sqrtgammaDET(gammaDD)\n",
     "\n",
-    "    # Then declare derivatives & compute g4DD_zerotimederiv_dD\n",
-    "    gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\",DIM=3)\n",
-    "    betaU_dD   = ixp.declarerank2(\"betaU_dD\"  ,\"nosym\",DIM=3)\n",
-    "    alpha_dD   = ixp.declarerank1(\"alpha_dD\"          ,DIM=3)\n",
+    "    # Then compute g4DD_zerotimederiv_dD\n",
     "    GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
-    "\n",
-    "    # Then numerical constant\n",
-    "    sqrt4pi = sp.symbols('sqrt4pi', real=True)\n",
     "\n",
     "    # small b\n",
     "    GRFFE.compute_smallb4U(gammaDD,betaU,alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
+    "    GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
     "    # Electromagnetic stress-energy tensor\n",
     "    GRFFE.compute_TEM4UU(gammaDD,betaU,alpha, GRFFE.smallb4U, GRFFE.smallbsquared,GRHD.u4U_ito_ValenciavU)\n",
     "\n",
+    "    # Add the source term to the RHS\n",
     "    global Stilde_rhsD\n",
-    "    Stilde_rhsD = ixp.declarerank1(\"Stilde_rhsD\",DIM=3)\n",
+    "    Stilde_rhsD = ixp.zerorank1(DIM=3)\n",
     "    for i in range(3):\n",
     "        for mu in range(4):\n",
     "            for nu in range(4):\n",
@@ -182,14 +171,14 @@
     "\n",
     "Next, we'll code the gauge term of $A_i$, expressed as \n",
     "$$\n",
-    "\\partial_t A_i -= \\partial_i (\\alpha \\Phi - \\beta^j A_j).\n",
+    "\\partial_t A_i \\ +=-\\partial_i (\\alpha \\Phi - \\beta^j A_j).\n",
     "$$\n",
     "We'll do this in two steps. In the first, we'll compute the parenthetical. Then, we'll declare a derivative of that term and add it to the $A_i$ RHS."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,11 +191,12 @@
     "    for j in range(3):\n",
     "        AevolParen += -betaU[j] * AD[j]\n",
     "\n",
+    "    # Take the gradient of the parenthetical and subtract it from the RHS\n",
     "    AevolParen_dD = ixp.declarerank1(\"AevolParen_dD\",DIM=3)\n",
     "    global A_rhsD\n",
     "    A_rhsD = ixp.declarerank1(\"A_rhsD\",DIM=3)\n",
     "    for i in range(3):\n",
-    "        A_rhsD[i] += AevolParen_dD[i]"
+    "        A_rhsD[i] += -AevolParen_dD[i]"
    ]
   },
   {
@@ -227,13 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_psi6Phi_rhs(gammaDD,betaU,alpha,AD,psi6Phi,xi_damping):\n",
     "    GRHD.compute_sqrtgammaDET(gammaDD)\n",
-    "    gammaUU = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "    gammaUU,unusedgammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "    AU = ixp.zerorank1()\n",
     "    # Raise the index on A in the usual way:\n",
     "    for i in range(3):\n",
@@ -248,11 +238,13 @@
     "        PhievolParenU[j] += alpha*GRHD.sqrtgammaDET*AU[j] - betaU[j]*psi6Phi\n",
     "    \n",
     "    # Tell NRPy+ to take the derivative numerically:\n",
-    "    PhievolParenU_dD = ixp.declarerank2(\"PhievolParenU_dD\",\"nosym\",DIM-3)\n",
+    "    PhievolParenU_dD = ixp.declarerank2(\"PhievolParenU_dD\",\"nosym\",DIM=3)\n",
     "    # -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]\n",
     "    PhievolParen_innerProduct = sp.sympify(0)\n",
-    "    for j in range(DIM):\n",
+    "    # Divergence of the parenthetical term\n",
+    "    for j in range(3):\n",
     "        PhievolParen_innerProduct += PhievolParenU_dD[j][j]\n",
+    "    # Combine the divergence and the damping term\n",
     "    global psi6Phi_rhs\n",
     "    psi6Phi_rhs = -PhievolParen_innerProduct - xi_damping * alpha * psi6Phi\n"
    ]
@@ -264,7 +256,91 @@
     "<a id='code_validation'></a>\n",
     "\n",
     "# Step 5: Code Validation against `GiRaFFE_NRPy.Stilde_source_A_gauge_Phi_rhs` NRPy+ Module \\[Back to [top](#toc)\\]\n",
-    "$$\\label{code_validation}$$\n"
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ evolution equations and auxiliary quantities we intend to use between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ [GiRaFFE_NRPy.Stilde_source_A_gauge_Phi_rhs](../../edit/in_progress/GiRaFFE_NRPy/Stilde_source_A_gauge_Phi_rhs.py) module.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL TESTS PASSED!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First define magnetohydrodynamical quantities\n",
+    "ValenciavU = ixp.declarerank1(\"ValenciavU\", DIM=3)\n",
+    "BU         = ixp.declarerank1(\"BU\", DIM=3)\n",
+    "AD         = ixp.declarerank1(\"AD\", DIM=3)\n",
+    "psi6Phi    = sp.symbols('psi6Phi', real=True)\n",
+    "\n",
+    "# Then ADM quantities\n",
+    "gammaDD = ixp.declarerank2(\"gammaDD\",\"sym01\",DIM=3)\n",
+    "betaU   = ixp.declarerank1(\"betaU\", DIM=3)\n",
+    "alpha   = sp.symbols('alpha', real=True)\n",
+    "\n",
+    "# Then declare derivatives\n",
+    "gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\",DIM=3)\n",
+    "betaU_dD   = ixp.declarerank2(\"betaU_dD\"  ,\"nosym\",DIM=3)\n",
+    "alpha_dD   = ixp.declarerank1(\"alpha_dD\"          ,DIM=3)\n",
+    "\n",
+    "# Then numerical constant\n",
+    "sqrt4pi = sp.symbols('sqrt4pi', real=True)\n",
+    "xi_damping = sp.symbols('xi_damping', real=True)\n",
+    "\n",
+    "# Import the module to test:\n",
+    "import GiRaFFE_NRPy.Stilde_source_A_gauge_Phi_rhs as rhs\n",
+    "\n",
+    "all_passed=True\n",
+    "def comp_func(expr1,expr2,basename,prefixname2=\"C2P_P2C.\"):\n",
+    "    if str(expr1-expr2)!=\"0\":\n",
+    "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
+    "        all_passed=False\n",
+    "\n",
+    "def gfnm(basename,idx1,idx2=None,idx3=None):\n",
+    "    if idx2==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"]\"\n",
+    "    if idx3==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"]\"\n",
+    "    return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"][\"+str(idx3)+\"]\"\n",
+    "\n",
+    "expr_list = []\n",
+    "exprcheck_list = []\n",
+    "namecheck_list = []\n",
+    "\n",
+    "compute_StildeD_source_term(gammaDD,betaU,alpha,gammaDD_dD,betaU_dD,alpha_dD,sqrt4pi,ValenciavU,BU)\n",
+    "compute_AD_gauge_term(gammaDD,betaU,alpha,psi6Phi,AD)\n",
+    "compute_psi6Phi_rhs(gammaDD,betaU,alpha,AD,psi6Phi,xi_damping)\n",
+    "rhs.compute_StildeD_source_term(gammaDD,betaU,alpha,gammaDD_dD,betaU_dD,alpha_dD,sqrt4pi,ValenciavU,BU)\n",
+    "rhs.compute_AD_gauge_term(gammaDD,betaU,alpha,psi6Phi,AD)\n",
+    "rhs.compute_psi6Phi_rhs(gammaDD,betaU,alpha,AD,psi6Phi,xi_damping)\n",
+    "\n",
+    "namecheck_list.extend([\"AevolParen\",\"psi6Phi_rhs\"])\n",
+    "exprcheck_list.extend([rhs.AevolParen,rhs.psi6Phi_rhs])\n",
+    "expr_list.extend([AevolParen,psi6Phi_rhs])\n",
+    "for i in range(3):\n",
+    "    namecheck_list.extend([gfnm(\"Stilde_rhsD\",i),gfnm(\"A_rhsD\",i),gfnm(\"PhievolParenU\",i)])\n",
+    "    exprcheck_list.extend([rhs.Stilde_rhsD[i],rhs.A_rhsD[i],rhs.PhievolParenU[i]])\n",
+    "    expr_list.extend([Stilde_rhsD[i],A_rhsD[i],PhievolParenU[i]])\n",
+    "\n",
+    "for i in range(len(expr_list)):\n",
+    "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
+    "\n",
+    "import sys\n",
+    "if all_passed:\n",
+    "    print(\"ALL TESTS PASSED!\")\n",
+    "else:\n",
+    "    print(\"ERROR: AT LEAST ONE TEST DID NOT PASS\")\n",
+    "    sys.exit(1)\n"
    ]
   },
   {
@@ -274,15 +350,40 @@
     "<a id='latex_pdf_output'></a>\n",
     "\n",
     "# Step 6: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
-    "$$\\label{latex_pdf_output}$$\n"
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.pdf](Tutorial-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
+   ]
   }
  ],
  "metadata": {
