--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.ipynb
@@ -193,6 +193,8 @@
     "BU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"BU\")\n",
     "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"ValenciavU\")\n",
     "\n",
+    "gammaUU,gammadet = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "\n",
     "AD[0] = sp.exp(e*y+f*z)\n",
     "AD[1] = sp.exp(f*z+d*x)\n",
     "AD[2] = sp.exp(d*x+e*y)\n",
@@ -203,23 +205,22 @@
     "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
     "LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
     "LeviCivitaUUU = ixp.zerorank3()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
     "            LCijk = LeviCivitaDDD[i][j][k]\n",
     "            #LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gho.gammadet)\n",
     "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gammadet)\n",
     "\n",
     "BU = ixp.zerorank1() # BU is already registered as a gridfunction, but we need to zero its values and declare it in this scope.\n",
     "\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
     "            BU[i] += LeviCivitaUUU[i][j][k] * sp.diff(AD[k],rfm.xxCart[j])\n",
     "\n",
-    "gammaUU,gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "psi6Phi = gri.register_gridfunctions(\"EVOL\",\"psi6Phi\")\n",
-    "psi6Phi = gammaDET * (1+x*x+y*y+z*z)"
+    "psi6Phi = gammadet * (1+x*x+y*y+z*z)"
    ]
   },
   {
@@ -246,7 +247,7 @@
      "output_type": "stream",
      "text": [
       "Output C function calculate_metric_gfs() to file Validation/calculate_metric_gfs.h\n",
-      "Output C function calculate_BU() to file Validation/calculate_BU.h\n",
+      "Output C function calculate_BU_AD_psi6Phi() to file Validation/calculate_BU_AD_psi6Phi.h\n",
       "Output C function calculate_ValenciavU() to file Validation/calculate_ValenciavU.h\n"
      ]
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,6 +340,7 @@
     "    alpha_dD[i] = sp.diff(alpha,rfm.xxCart[i])\n",
     "    \n",
     "import GRHD.equations as GRHD\n",
+    "import GRFFE.equations as GRFFE\n",
     "    \n",
     "GRHD.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha,betaU,gammaDD, ValenciavU)\n",
     "\n",
@@ -349,6 +351,7 @@
     "GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
     "\n",
     "# small b\n",
+    "sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "GRFFE.compute_smallb4U(gammaDD,betaU,alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
     "GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
     "# Electromagnetic stress-energy tensor\n",
@@ -376,13 +379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "psi6Phi_dD = ixp.zerorank1()\n",
+    "Phi_dD = ixp.zerorank1()\n",
     "for i in range(3):\n",
-    "    psi6Phi_dD[i] = sp.diff(psi6Phi,rfm.xxCart[i])\n",
+    "    Phi_dD[i] = sp.diff(psi6Phi/GRHD.sqrtgammaDET,rfm.xxCart[i])\n",
     "AD_dD = ixp.zerorank2()\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
@@ -390,11 +393,90 @@
     "\n",
     "A_rhsD = ixp.zerorank1()\n",
     "for i in range(3):\n",
-    "    A_rhsD[i] += -alpha_dD[i]*psi6Phi/sp.sqrt(gammaDET) - alpha*psi6Phi_dD[i]\n",
+    "    A_rhsD[i] += -alpha_dD[i]*psi6Phi/GRHD.sqrtgammaDET - alpha*Phi_dD[i]\n",
     "    \n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
-    "        A_rhsD[i] += betaU_dD[j][i]*AD[j] + betaU[j]*AD[j][i]\n"
+    "        A_rhsD[i] += betaU_dD[j][i]*AD[j] + betaU[j]*AD_dD[j][i]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally, we will code the equation \n",
+    "\\begin{align}\n",
+    "\\partial_t [\\sqrt{\\gamma} \\Phi] &= -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi] \\\\\n",
+    "&= \\alpha_{,j} A^j + \\alpha A^j_{,j} - \\beta^j_{,j} [\\sqrt{\\gamma} \\Phi] - \\beta^j [\\sqrt{\\gamma} \\Phi]_{,j} - \\xi \\alpha [\\sqrt{\\gamma} \\Phi]\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi6Phi_dD = ixp.zerorank1()\n",
+    "for i in range(3):\n",
+    "    psi6Phi_dD[i] = sp.diff(psi6Phi,rfm.xxCart[i])\n",
+    "    \n",
+    "gammaUU,unusedgammadet = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "AU = ixp.zerorank1()\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        AU[i] = gammaUU[i][j]*AD[j]\n",
+    "AU_dD = ixp.zerorank2()\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        AU_dD[i][j] = sp.diff(AU[i],rfm.xxCart[j])\n",
+    "\n",
+    "xi_damping = par.Cparameters(\"REAL\",thismodule,\"xi_damping\",0.1)\n",
+    "psi6Phi_rhs = -xi_damping*alpha*psi6Phi\n",
+    "for j in range(3):\n",
+    "    psi6Phi_rhs += alpha_dD[j]*AU[j] + alpha*AU_dD[j][j] - betaU_dD[j][j]*psi6Phi - betaU[j]*psi6Phi_dD[j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With these expressions coded, we can finally generate the C function to write this data for a comparison. We will do this using `outCfunction()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function calculate_analytic_RHSs() to file Validation/calculate_analytic_RHSs.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "StildeD = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"StildeD\")\n",
+    "\n",
+    "RHSs_to_print = [\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"evol_gfs\",\"StildeD0\"),rhs=Stilde_rhsD[0]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"evol_gfs\",\"StildeD1\"),rhs=Stilde_rhsD[1]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"evol_gfs\",\"StildeD2\"),rhs=Stilde_rhsD[2]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"evol_gfs\",\"AD0\"),rhs=A_rhsD[0]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"evol_gfs\",\"AD1\"),rhs=A_rhsD[1]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"evol_gfs\",\"AD2\"),rhs=A_rhsD[2]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"evol_gfs\",\"psi6Phi\"),rhs=psi6Phi_rhs),\\\n",
+    "                ]\n",
+    "\n",
+    "desc = \"Calculate analytic RHSs for comparison\"\n",
+    "name = \"calculate_analytic_RHSs\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "    params   =\"const paramstruct *params,REAL *xx[3],REAL *auxevol_gfs\",\n",
+    "    body     = fin.FD_outputC(\"returnstring\",RHSs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
+    "    loopopts =\"AllPoints,Read_xxs\")\n"
    ]
   },
   {
@@ -408,12 +490,12 @@
     "\n",
     "Here, we will generate the functions that we specifically wish to test. We'll start with the source term for $\\partial_t \\tilde{S}_i$. This term involves derivatives of the metric tensor, and in `GiRaFFE`, we will be storing interpolations of the metric quantities to the cell faces of our grid. This will allow us to save some time in our simulations if we compute the finite differences in a somewhat unusual way. If we do a simple, first-order finite-difference derivative of these interpolations, we can take a derivative with the accuracy of a higher-order stencil but the computational cost of a first-order stencil. To do this, we will create arrays of NRPy+'s `Cparameter`s to pass to the function that will build the RHS, then write the lines of code by hand to compute the derivatives for them. \n",
     "\n",
-    "Additionally, we will write this as three similar functions, corresponding to once in each spatial direction as we take derivatives. "
+    "Additionally, we will write this as three similar functions, corresponding to one for each spatial direction in which we take derivatives. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -438,11 +520,7 @@
     "AD = ixp.declarerank1(\"AD\",DIM=3)\n",
     "psi6Phi = sp.symbols(\"psi6Phi\",real=True)\n",
     "\n",
-    "# Declare the gridfunction to which we will write\n",
-    "StildeD = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"StildeD\")\n",
-    "\n",
     "# Declare all the Cparameterse we will need\n",
-    "sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "metricderivDDD = ixp.declarerank3(\"metricderivDDD\",\"sym01\",DIM=3)\n",
     "shiftderivUD = ixp.declarerank2(\"shiftderivUD\",\"nosym\",DIM=3)\n",
     "lapsederivD = ixp.declarerank1(\"lapsederivD\",DIM=3)\n",
@@ -518,6 +596,92 @@
     "                  +outputC(rhs.Stilde_rhsD[i],\"Stilde_rhsD\"+str(i),\"returnstring\",params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\")\\\n",
     "                  +write_final_quantity[i],\n",
     "        loopopts =\"InteriorPoints\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we will write the C function to compute the the quantities inside the parentheses for the $A_i$ gauge term and $\\sqrt{\\gamma} \\Phi$ RHS. This needs to be done as a separate step before we compute the contributions to the RHSs themselves in order to fully leverage the automated finite-differencing for these terms. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: gridfunction \"AevolParen\" is not registered!\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/penelson/jup38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3327: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rhs.compute_AD_gauge_term(gammaDD,betaU,alpha,psi6Phi,AD)\n",
+    "rhs.compute_psi6Phi_rhs(gammaDD,betaU,alpha,AD,psi6Phi,xi_damping)\n",
+    "\n",
+    "parens_to_print = [\\\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"AevolParen\"),rhs=rhs.AevolParen),\\\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"PhievolParenU0\"),rhs=rhs.PhievolParenU[0]),\\\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"PhievolParenU1\"),rhs=rhs.PhievolParenU[1]),\\\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"PhievolParenU2\"),rhs=rhs.PhievolParenU[2]),\\\n",
+    "                  ]\n",
+    "\n",
+    "desc = \"Calculate quantities to be finite-differenced for the GRFFE RHSs\"\n",
+    "name = \"calculate_analytic_RHSs\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "    params   =\"const paramstruct *params,REAL *xx[3],const REAL *evol_gfs,REAL *auxevol_gfs\",\n",
+    "    body     = fin.FD_outputC(\"returnstring\",parens_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
+    "    loopopts =\"InteriorPoints\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With these terms computed, we can move on to generating the function that will add to the RHSs. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RHSs_to_print = [\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD0\"),rhs=rhs.A_rhsD[0]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD0\"),rhs=rhs.A_rhsD[1]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD0\"),rhs=rhs.A_rhsD[2]),\\\n",
+    "                 lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"psi6Phi\"),rhs=rhs.psi6Phi_rhs),\\\n",
+    "                ]\n",
+    "\n",
+    "desc = \"Calculate quantities to be finite-differenced for the GRFFE RHSs\"\n",
+    "name = \"calculate_analytic_RHSs\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "    params   =\"const paramstruct *params,REAL *xx[3],const REAL *evol_gfs,REAL *auxevol_gfs\",\n",
+    "    body     = fin.FD_outputC(\"returnstring\",RHSs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
+    "    loopopts =\"InteriorPoints\")\n"
    ]
   },
   {
