added radial oscillations

--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -318,7 +318,7 @@
     "        nuArr.extend(np.log(1. - 2.*M/r_SchwArrExtend_np))\n",
     "        rbarArr.extend( 0.5*(np.sqrt(r_SchwArrExtend_np**2 - 2.*M*r_SchwArrExtend_np) + r_SchwArrExtend_np - M) )\n",
     "\n",
-    "        phiArr_np = np.append( np.exp(nuArr_np), 1. - 2.*M/rArrExtend_np)\n",
+    "        #phiArr_np = np.append( np.exp(nuArr_np), 1. - 2.*M/r_SchwArrExtend_np)\n",
     "        \n",
     "        # Appending to a Python array does what one would reasonably expect.\n",
     "        #   Appending to a numpy array allocates space for a new array with size+1,\n",
@@ -390,7 +390,7 @@
     "\n",
     "M_TOV, R_Schw_TOV = TOV_Solver(eos,outfile=\"outputTOVpolytrope.txt\",rho_baryon_central=0.129285,verbose = True,\n",
     "                               return_M_and_RSchw=True,accuracy=\"medium\",integrator_type=\"default\",\n",
-    "                               pressure_renormalization=0.9)"
+    "                               pressure_renormalization=1.0)"
    ]
   },
   {
@@ -424,24 +424,7 @@
       "* R_iso    = 8.100085557410308e-01 , \n",
       "* M/R_Schw = 1.468768334847266e-01 \n",
       "\n",
-      "ERROR: TOV initial data test FAILED!\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pchang/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3333: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "TOV initial data test PASSED.\n"
      ]
     }
    ],
@@ -482,9 +465,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2019/dev/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2019/dev/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2019/dev/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-ADM_Initial_Data-TOV.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-TOV.tex\n",
