--- a/Tutorial-BSSN_in_terms_of_ADM.ipynb
+++ b/Tutorial-BSSN_in_terms_of_ADM.ipynb
@@ -254,6 +254,11 @@
     "        for j in range(DIM):\n",
     "            for k in range(DIM):\n",
     "                LambdabarU[i] += gammabarUU[j][k] * (GammabarUDD[i][j][k] - rfm.GammahatUDD[i][j][k])\n",
+    "    for i in range(DIM):\n",
+    "        # We evaluate LambdabarU[i] here to ensure proper cancellations. If these cancellations\n",
+    "        #   are not applied, certain expressions (e.g., lambdaU[0] in StaticTrumpet) will\n",
+    "        #   cause SymPy's (v1.5+) CSE algorithm to hang\n",
+    "        LambdabarU[i] = LambdabarU[i].doit()\n",
     "    lambdaU    = ixp.zerorank1()\n",
     "    for i in range(DIM):\n",
     "        lambdaU[i] = LambdabarU[i] / rfm.ReU[i]"
@@ -491,15 +496,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
