Tutorial-Psi4_tetrads.ipynb: Replace the sp.simplify() with a .doit(); the simplify caused hangs with certain SymPy versions & coord systems

--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -241,10 +241,12 @@
     "                v3U[a] += sp.sqrt(detgamma)*gammaUU[a][d]*LeviCivitaSymbolDDD[d][b][c]*v1U[b]*v2U[c]\n",
     "\n",
     "# Step 2.h.i: Simplify expressions for v1U,v2U,v3U. This greatly expedites the C code generation (~10x faster)\n",
+    "#             Drat. Simplification with certain versions of SymPy & coord systems results in a hang. Let's just\n",
+    "#             evaluate the expressions so the most trivial optimizations can be performed.\n",
     "for a in range(DIM):\n",
-    "    v1U[a] = sp.simplify(v1U[a])\n",
-    "    v2U[a] = sp.simplify(v2U[a])\n",
-    "    v3U[a] = sp.simplify(v3U[a])"
+    "    v1U[a] = v1U[a].doit() #sp.simplify(v1U[a])\n",
+    "    v2U[a] = v2U[a].doit() #sp.simplify(v2U[a])\n",
+    "    v3U[a] = v3U[a].doit() #sp.simplify(v3U[a])"
    ]
   },
   {
@@ -461,15 +463,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
