--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-Stilde_source_A_gauge_Phi_rhs.ipynb
@@ -115,12 +115,12 @@
     "Now, we'll choose some functions with arbitrary forms to generate test data. We'll need to set ten gridfunctions, so expressions are being pulled from several previously written unit tests.\n",
     "\n",
     "\\begin{align}\n",
-    "\\gamma_{xx} &= ax^3 + by^3 + cz^3 + dy^2 + ez^2 + f \\\\\n",
-    "\\gamma_{yy} &= gx^3 + hy^3 + lz^3 + mx^2 + nz^2 + p \\\\\n",
-    "\\gamma_{zz} &= px^3 + qy^3 + rz^3 + sx^2 + ty^2 + u. \\\\\n",
-    "\\gamma_{xy} &= a \\exp\\left(-\\left((x-b)^2+(y-c)^2+(z-d)^2\\right)\\right) \\\\\n",
-    "\\gamma_{xz} &= f \\exp\\left(-\\left((x-g)^2+(y-h)^2+(z-l)^2\\right)\\right) \\\\\n",
-    "\\gamma_{yz} &= m \\exp\\left(-\\left((x-n)^2+(y-o)^2+(z-p)^2\\right)\\right), \\\\\n",
+    "\\gamma_{xx} &= a \\exp\\left(-\\left((x-b)^2+(y-c)^2+(z-d)^2\\right)\\right) \\\\\n",
+    "\\gamma_{yy} &= f \\exp\\left(-\\left((x-g)^2+(y-h)^2+(z-l)^2\\right)\\right) \\\\\n",
+    "\\gamma_{zz} &= m \\exp\\left(-\\left((x-n)^2+(y-o)^2+(z-p)^2\\right)\\right), \\\\\n",
+    "\\gamma_{xy} &= ax^3 + by^3 + cz^3 + dy^2 + ez^2 + f \\\\\n",
+    "\\gamma_{xz} &= gx^3 + hy^3 + lz^3 + mx^2 + nz^2 + p \\\\\n",
+    "\\gamma_{yz} &= px^3 + qy^3 + rz^3 + sx^2 + ty^2 + u. \\\\\n",
     "\\beta^x &= \\arctan(ax + by + cz) \\\\\n",
     "\\beta^y &= \\arctan(bx + cy + az) \\\\\n",
     "\\beta^z &= \\arctan(cx + ay + bz) \\\\\n",
@@ -147,12 +147,12 @@
     "y = rfm.xxCart[1]\n",
     "z = rfm.xxCart[2]\n",
     "\n",
-    "gammaDD[0][0] = a*x**3 + b*y**3 + c*z**3 + d*y**2 + e*z**2 + f\n",
-    "gammaDD[1][1] = g*x**3 + h*y**3 + l*z**3 + m*x**2 + n*z**2 + o\n",
-    "gammaDD[2][2] = p*x**3 + q*y**3 + r*z**3 + s*x**2 + t*y**2 + u\n",
-    "gammaDD[0][1] = gammaDD[1][0] = a * sp.exp(-((x-b)**2 + (y-c)**2 + (z-d)**2))\n",
-    "gammaDD[0][2] = gammaDD[2][0] = f * sp.exp(-((x-g)**2 + (y-h)**2 + (z-l)**2))\n",
-    "gammaDD[1][2] = gammaDD[2][1] = m * sp.exp(-((x-n)**2 + (y-o)**2 + (z-p)**2))\n",
+    "gammaDD[0][0] = sp.sympify(1.0)#1.0 + 0.1*(a * sp.exp(-((x-b)**2 + (y-c)**2 + (z-d)**2)))\n",
+    "gammaDD[1][1] = sp.sympify(1.0)#1.0 + 0.1*(f * sp.exp(-((x-g)**2 + (y-h)**2 + (z-l)**2)))\n",
+    "gammaDD[2][2] = sp.sympify(1.0)#1.0 + 0.1*(m * sp.exp(-((x-n)**2 + (y-o)**2 + (z-p)**2)))\n",
+    "gammaDD[0][1] = gammaDD[1][0] = sp.sympify(0.0)#0.1*(a*x**3 + b*y**3 + c*z**3 + d*y**2 + e*z**2 + f)\n",
+    "gammaDD[0][2] = gammaDD[2][0] = sp.sympify(0.0)#0.1*(g*x**3 + h*y**3 + l*z**3 + m*x**2 + n*z**2 + o)\n",
+    "gammaDD[1][2] = gammaDD[2][1] = sp.sympify(0.0)#0.1*(p*x**3 + q*y**3 + r*z**3 + s*x**2 + t*y**2 + u)\n",
     "\n",
     "betaU[0] = sp.atan(a*x + b*y + c*z)\n",
     "betaU[1] = sp.atan(b*x + c*y + a*z)\n",
@@ -277,17 +277,17 @@
     "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"BU2\"),rhs=BU[2]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"AD0\"),rhs=AD[0]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"AD1\"),rhs=AD[1]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"AD2\"),rhs=AD[2]),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"psi6Phi\"),rhs=psi6Phi),\\\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD0\"),rhs=AD[0]),\\\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD1\"),rhs=AD[1]),\\\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD2\"),rhs=AD[2]),\\\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi6Phi\"),rhs=psi6Phi),\\\n",
     "              ]\n",
     "\n",
     "desc = \"Calculate sample magnetic field and potential data\"\n",
     "name = \"calculate_BU_AD_psi6Phi\"\n",
     "outCfunction(\n",
     "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
-    "    params   =\"const paramstruct *params,REAL *xx[3],REAL *auxevol_gfs\",\n",
+    "    params   =\"const paramstruct *params,REAL *xx[3],REAL *auxevol_gfs,REAL *out_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",EM_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts =\"AllPoints,Read_xxs\")\n",
     "\n",
@@ -344,9 +344,6 @@
     "TINYDOUBLE = par.Cparameters(\"REAL\",thismodule,\"TINYDOUBLE\",1e-100)\n",
     "\n",
     "GRHD.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha,betaU,gammaDD, ValenciavU)\n",
-    "# print(GRHD.u4U_ito_ValenciavU[0])\n",
-    "# print(GRHD.u4U_ito_ValenciavU[1])\n",
-    "# print(GRHD.u4U_ito_ValenciavU[2])\n",
     "\n",
     "# Next sqrt(gamma)\n",
     "GRHD.compute_sqrtgammaDET(gammaDD)\n",
@@ -762,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +892,7 @@
     "\n",
     "    // First, calculate the test data on our grid:\n",
     "    calculate_metric_gfs(&params,xx,auxevol_gfs);\n",
-    "    calculate_BU_AD_psi6Phi(&params,xx,auxevol_gfs);\n",
+    "    calculate_BU_AD_psi6Phi(&params,xx,auxevol_gfs,evol_gfs);\n",
     "    calculate_ValenciavU(&params,xx,auxevol_gfs);\n",
     "    calculate_analytic_RHSs(&params,xx,rhs_exact_gfs);\n",
     "    // Now, run our function:\n",
@@ -910,8 +907,8 @@
     "    calculate_StildeD2_source_term(&params,xx,auxevol_gfs,rhs_gfs);\n",
     "    calculate_parentheticals_for_RHSs(&params,xx,evol_gfs,auxevol_gfs);\n",
     "    calculate_AD_gauge_psi6Phi_RHSs(&params,xx,evol_gfs,auxevol_gfs,rhs_gfs);\n",
-    "    printf(\"Exact: Stilde_rhsD0 = %.15e\\n\",rhs_exact_gfs[IDX4S(AD0GF,4,4,4)]);\n",
-    "    printf(\"Numer: Stilde_rhsD0 = %.15e\\n\",rhs_gfs[IDX4S(AD0GF,4,4,4)]);\n",
+    "    printf(\"Exact: Stilde_rhsD: %.15e,%.15e,%.15e\\n\",rhs_exact_gfs[IDX4S(AD0GF,4,4,4)],rhs_exact_gfs[IDX4S(AD1GF,4,4,4)],rhs_exact_gfs[IDX4S(AD2GF,4,4,4)]);\n",
+    "    printf(\"Numer: Stilde_rhsD: %.15e,%.15e,%.15e\\n\",rhs_gfs[IDX4S(AD0GF,4,4,4)],rhs_gfs[IDX4S(AD1GF,4,4,4)],rhs_gfs[IDX4S(AD2GF,4,4,4)]);\n",
     "    \n",
     "    /*char filename[100];\n",
     "    sprintf(filename,\"out%d-numer.txt\",Nxx0);\n",
@@ -941,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -952,9 +949,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test -lm`...\n",
-      "Finished executing in 1.2201755046844482 seconds.\n",
+      "Finished executing in 1.018183708190918 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.2405619621276855 seconds.\n",
+      "Finished in 1.0319006443023682 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -968,9 +965,9 @@
       "xx[0][5] = 1.000000000000000e+00\n",
       "xx[0][6] = 2.000000000000000e+00\n",
       "xx[0][7] = 3.000000000000000e+00\n",
-      "Exact: Stilde_rhsD0 = -nan\n",
-      "Numer: Stilde_rhsD0 = -0.000000000000000e+00\n",
-      "Finished in 0.11662602424621582 seconds.\n",
+      "Exact: Stilde_rhsD: 5.800000000000001e-01,5.800000000000001e-01,5.800000000000001e-01\n",
+      "Numer: Stilde_rhsD: 9.423052927654602e-01,0.000000000000000e+00,0.000000000000000e+00\n",
+      "Finished in 0.12898802757263184 seconds.\n",
       "\n",
       "\n"
      ]
