GiRaFFE_NRPy: Minor formatting fix. Renamed a unit test and deleted an extraneous tutorial.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "<a id='intro'></a>\n",
     "\n",
-    "**Notebook Status:** <font color=Green><b> Self-Validated </b></font>\n",
+    "**Notebook Status:** <font color=Green><b> Validated </b></font>\n",
     "\n",
     "**Validation Notes:** These functions have been validated to round-off precision against the coresponding functions in the original `GiRaFFE`.\n",
     "\n",
