--- a/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb
@@ -64,11 +64,12 @@
     "This notebook is organized as follows:\n",
     "\n",
     "1. [Step 1](#prelim): Preliminaries\n",
-    "1. [Step 2](#e_i_flux): The $\\tilde{S}_i$ function\n",
+    "1. [Step 2](#b_i_flux): Computing the Magnetic Flux\n",
     "    1. [Step 2.a](#hydro_speed): GRFFE characteristic wave speeds\n",
     "    1. [Step 2.b](#fluxes): Compute the HLLE fluxes\n",
-    "1. [Step 3](#code_validation): Code Validation against `GiRaFFE_NRPy.Induction_Equation` NRPy+ Module\n",
-    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
+    "1. [Step 3](#electric_field): Computing the Electric Field from the Magnetic Flux\n",
+    "1. [Step 4](#code_validation): Code Validation against `GiRaFFE_NRPy.Induction_Equation` NRPy+ Module\n",
+    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -106,7 +107,7 @@
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
-    "thismodule = \"GiRaFFE_NRPy-Induction_Equation\"\n",
+    "thismodule = \"GiRaFFE_NRPy-Afield_flux\"\n",
     "\n",
     "import GRHD.equations as GRHD\n",
     "import GRFFE.equations as GRFFE\n",
@@ -120,10 +121,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='e_i_flux'></a>\n",
+    "<a id='b_i_flux'></a>\n",
     "\n",
-    "# Step 2: The $\\tilde{S}_i$ function \\[Back to [top](#toc)\\]\n",
-    "$$\\label{e_i_flux}$$\n",
+    "# Step 2: Computing the Magnetic Flux \\[Back to [top](#toc)\\]\n",
+    "$$\\label{b_i_flux}$$\n",
     "\n",
     "<a id='hydro_speed'></a>\n",
     "\n",
@@ -280,10 +281,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_E_i_flux(inputs_provided=True,alpha_face=None,gamma_faceDD=None,beta_faceU=None,\\\n",
-    "                       Valenciav_rU=None,B_rU=None,Valenciav_lU=None,B_lU=None):\n",
-    "    global E_fluxD\n",
-    "    E_fluxD = ixp.zerorank1()\n",
+    "def calculate_B_i_flux(alpha_face,gamma_faceDD,beta_faceU,Valenciav_rU,B_rU,Valenciav_lU,B_lU):\n",
+    "    global B_fluxD\n",
+    "    B_fluxD = ixp.zerorank1()\n",
     "    for flux_dirn in range(3):\n",
     "        find_cmax_cmin(flux_dirn,gamma_faceDD,beta_faceU,alpha_face)\n",
     "        calculate_flux_and_state_for_Induction(flux_dirn, gamma_faceDD,beta_faceU,alpha_face,\\\n",
@@ -294,7 +294,7 @@
     "                                               Valenciav_lU,B_lU)\n",
     "        Fl = F\n",
     "        Ul = U\n",
-    "        E_fluxD[flux_dirn] += HLLE_solver(cmax, cmin, Fr, Fl, Ur, Ul)\n"
+    "        B_fluxD[flux_dirn] += HLLE_solver(cmax, cmin, Fr, Fl, Ur, Ul)\n"
    ]
   },
   {
@@ -308,9 +308,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='electric_field'></a>\n",
+    "\n",
+    "# Step 3: Computing the Electric Field from the Magnetic Flux \\[Back to [top](#toc)\\]\n",
+    "$$\\label{electric_field}$$\n",
+    "\n",
+    "Now that we have calculated the magnetic flux through each cell face, we must now combine this with the drift velocity according to the typical formula $E_i = -\\epsilon_{ijk} v^j B^k$ in order to obtain the contribution to the right hand side of the vector potential evolution equation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_Efield_contribution_to_A_i_RHS(inputs_provided=True,alpha_face=None,gamma_faceDD=None,\\\n",
+    "                                             beta_faceU=None,Valenciav_rU=None,B_rU=None,Valenciav_lU=None,\\\n",
+    "                                             B_lU=None):\n",
+    "    if not inputs_provided:\n",
+    "        # declare all variables\n",
+    "        alpha_face = sp.symbols(alpha_face)\n",
+    "        beta_faceU = ixp.declarerank1(\"beta_faceU\")\n",
+    "        gamma_faceDD = ixp.declarerank2(\"gamma_faceDD\",\"sym01\")\n",
+    "        Valenciav_rU = ixp.declarerank1(\"Valenciav_rU\")\n",
+    "        B_rU = ixp.declarerank1(\"B_rU\")\n",
+    "        Valenciav_lU = ixp.declarerank1(\"Valenciav_lU\")\n",
+    "        B_lU = ixp.declarerank1(\"B_lU\")\n",
+    "    # First, we must compute the magnetic flux:\n",
+    "    calculate_B_i_flux(alpha_face,gamma_faceDD,beta_faceU,Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
+    "    LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            for k in range(3):\n",
+    "                LCijk = LeviCivitaDDD[i][j][k]\n",
+    "                LeviCivitaDDD[i][j][k] = LCijk * GRHD.sqrtgammaDET\n",
+    "                \n",
+    "    qtr = sp.Rational(1,4)\n",
+    "    global E_rD,E_lD\n",
+    "    E_rD = ixp.zerorank1()\n",
+    "    E_lD = ixp.zerorank1()\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            for k in range(3):\n",
+    "                E_rD[i] += -qtr*LeviCivitaDDD[i][j][k] * (alpha_face*Valenciav_rU[j]-beta_faceU[j]) * B_fluxD[k]\n",
+    "                E_lD[i] += -qtr*LeviCivitaDDD[i][j][k] * (alpha_face*Valenciav_lU[j]-beta_faceU[j]) * B_fluxD[k]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 3:  Code Validation against `GiRaFFE_NRPy.Induction_Equation` NRPy+ Module \\[Back to [top](#toc)\\]\n",
+    "# Step 4:  Code Validation against `GiRaFFE_NRPy.Induction_Equation` NRPy+ Module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "\n",
@@ -323,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -369,21 +419,21 @@
     "Valenciav_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_lU\",DIM=3)\n",
     "B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
     "\n",
-    "import GiRaFFE_NRPy.Induction_Equation as Ef\n",
+    "import GiRaFFE_NRPy.Afield_flux as Af\n",
     "\n",
     "expr_list = []\n",
     "exprcheck_list = []\n",
     "namecheck_list = []\n",
     "\n",
-    "calculate_E_i_flux(True,alpha_face,gamma_faceDD,beta_faceU,\\\n",
-    "                   Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
-    "Ef.calculate_E_i_flux(True,alpha_face,gamma_faceDD,beta_faceU,\\\n",
-    "                      Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
+    "calculate_Efield_contribution_to_A_i_RHS(True,alpha_face,gamma_faceDD,beta_faceU,\\\n",
+    "                                         Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
+    "Af.calculate_Efield_contribution_to_A_i_RHS(True,alpha_face,gamma_faceDD,beta_faceU,\\\n",
+    "                                            Valenciav_rU,B_rU,Valenciav_lU,B_lU)\n",
     "\n",
     "for flux_dirn in range(3):\n",
-    "    namecheck_list.extend([gfnm(\"E_fluxD\",flux_dirn)])\n",
-    "    exprcheck_list.extend([Ef.E_fluxD[flux_dirn]])\n",
-    "    expr_list.extend([E_fluxD[flux_dirn]])\n",
+    "    namecheck_list.extend([gfnm(\"E_rD\",flux_dirn),gfnm(\"E_lD\",flux_dirn)])\n",
+    "    exprcheck_list.extend([Af.E_rD[flux_dirn],Af.E_lD[flux_dirn]])\n",
+    "    expr_list.extend([E_rD[flux_dirn],E_lD[flux_dirn]])\n",
     "\n",
     "for mom_comp in range(len(expr_list)):\n",
     "    comp_func(expr_list[mom_comp],exprcheck_list[mom_comp],namecheck_list[mom_comp])\n",
@@ -402,7 +452,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
@@ -411,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,10 +481,10 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Induction_Equation.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Induction_Equation.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Induction_Equation.tex\n",
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Afield_flux.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Afield_flux.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Afield_flux.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
